fixed some html alignment

--- a/Frontend/src/app/new-wbg/new-wbg.component.css
+++ b/Frontend/src/app/new-wbg/new-wbg.component.css
@@ -2,7 +2,19 @@
     display: flex;
 }
 
+.formContainer {
+    flex-direction: column;
+}
+
+.category {
+    display: flex;
+}
+
 img {
     max-height: 200px;
     max-width: 200px;
+}
+
+h1 {
+    text-align: center;
 }
